--- a/frontend/src/styles/Banner.css
+++ b/frontend/src/styles/Banner.css
@@ -1,10 +1,9 @@
 /* Banner.css */
 .banner {
-  margin-left: 20px;
   height: 100vh;
   padding-top: 80px; /* Push content below navbar */
   background: linear-gradient(to right, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.2) 100%), 
-              url('https://motionbgs.com/i/c/546x308/media/6379/muzan-demon-slayer.jpg.webp');
+              url('https://wallpapers-clan.com/wp-content/uploads/2025/06/demon-slayer-tanjiro-kamado-intense-moon-desktop-wallpaper-preview.jpg');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -14,6 +13,7 @@
 }
 
 .banner__content {
+  margin-left: 20px;
   max-width: 900px;
   z-index: 2;
 }
