--- a/frontend/src/styles/ProfileSelection.css
+++ b/frontend/src/styles/ProfileSelection.css
@@ -285,7 +285,7 @@ svg {
   position: absolute;
   bottom: 10px;
   right: 10px;
-  background: rgba(248, 242, 242, 0.858);
+  background: rgba(18, 15, 15, 0.858);
   border: none;
   border-radius: 50%;
   width: 30px;
@@ -293,7 +293,7 @@ svg {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: rgb(241, 238, 238);
   cursor: pointer;
   opacity: 0;
   transition: all 0.3s ease;
